<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/titleFragment">

    <fragment
        android:id="@+id/titleFragment"
        android:name="com.jimmy.englishproverbsapp.fragment.TitleFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_title" />
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.jimmy.englishproverbsapp.fragment.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/generalFragment"
        android:name="com.jimmy.englishproverbsapp.fragment.GeneralFragment"
        android:label="@string/general"
        tools:layout="@layout/fragment_general" />
    <fragment
        android:id="@+id/peopleFragment"
        android:name="com.jimmy.englishproverbsapp.fragment.PeopleFragment"
        android:label="@string/people"
        tools:layout="@layout/fragment_people" />
    <fragment
        android:id="@+id/problemsFragment"
        android:name="com.jimmy.englishproverbsapp.fragment.ProblemsFragment"
        android:label="@string/problems"
        tools:layout="@layout/fragment_problems" />
    <fragment
        android:id="@+id/relationshipFragment"
        android:name="com.jimmy.englishproverbsapp.fragment.RelationshipFragment"
        android:label="@string/relationship"
        tools:layout="@layout/fragment_relationship" />
    <fragment
        android:id="@+id/timeFragment"
        android:name="com.jimmy.englishproverbsapp.fragment.TimeFragment"
        android:label="@string/time"
        tools:layout="@layout/fragment_time" />
    <fragment
        android:id="@+id/workFragment"
        android:name="com.jimmy.englishproverbsapp.fragment.WorkFragment"
        android:label="@string/work"
        tools:layout="@layout/fragment_work" />
</navigation>